tests/negative/array_oob_set.sans
main() {
  a := [1 2 3]
  a[10] = 99
}
